@@ -1,4 +1,12 @@
-2005-12-31  Andrew Pinski  <pinskia@ohysics.uc.edu>
+2006-01-01  David Edelsohn  <edelsohn@gnu.org>
+
+	* config/rs6000/rs6000.c (rs6000_expand_compare_and_swapqhi): New.
+	(rs6000_split_compare_and_swapqhi): New.
+	* config/rs6000/sync.md (sync_compare_and_swap{hi,qi}): New.
+	(sync_compare_and_swapqhi_internal): New.
+	* config/rs6000/rs6000-protos.h: Declare.
+
+2005-12-31  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR tree-opt/25612
 	* tree-ssa-pre.c (compute_avail): Treat the static chain decl as a
